--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -4,152 +4,183 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>#AngaarHai</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon"
-        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%2210 0 100 100%22><text y=%22.90em%22 font-size=%2290%22>🔥</text></svg>">
+    <title>
+    {% block title %}
+    {% endblock %}
+</title>
 
-    <link rel="stylesheet" href="{% static 'css/home/css/nav.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/home/css/landing.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/home/css/footer.css' %}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
-        {% block css %}
-        {% endblock %}
+    {% block css %}
+    {% endblock %}
 
 </head>
 
 <body>
-    <!-- Navbaar -->
-    <nav class="navbar">
-        <div class="fix">
-            <div class="logo">
-                <a href="{% url 'home' %}">
-                <img src="{% static 'assets/angaar.svg' %}" alt="Logo">
+
+
+    <nav class="navbar navbar-expand-lg navbar-custom">
+        <div class="container-fluid">
+            <a class="navbar-brand text-white" href="#">
+                <!-- <img src="demo_static/img/home/angaar_logo-2.png" alt="The Angaar Batch" width="50" height="40" class="d-inline-block align-text-top"> -->
+                The Angaar Batch🔥
             </a>
-            </div>
-            <div class="hamburger " id="hamburger">
-                <i class="fas fa-bars"></i>
+
+            <button class="navbar-toggler menu" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-expanded="false" aria-label="Toggle navigation"
+                onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))"
+                aria-label="Main Menu">
+                <svg width="60" height="40" viewBox="0 0 100 100">
+                    <path class="line line1"
+                        d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058" />
+                    <path class="line line2" d="M 20,50 H 80" />
+                    <path class="line line3"
+                        d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942" />
+                </svg>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'about' %}">About</a>
+                    </li>
+                     <!--  <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li> -->
+                </ul>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item mx-1">
+                        <a href="{% url 'login' %}">
+                            <button style="width: 100%;">Login</button>
+                        </a>
+                    </li>
+
+                    <li class="nav-item mx-1">
+                        <a href="{% url 'register' %}">
+                            <button id="register-btn" style="width: 100%;">Register</button>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
-
-        <ul class="nav-links" id="nav-links" style="justify-content: center;">
-            <!-- <li><a href="/">Home</a></li>
-            <li><a href="{% url 'angaar_plus' %}">Our Courses</a></li>
-            <li><a href="{% url 'about' %}">About Us</a></li> -->
-
-<!-- 
-            <li>
-                <div class="razorpay-embed-btn" style="margin-bottom: -8%; margin-top: -3%;"
-                    data-url="https://pages.razorpay.com/pl_OEQj4sye62CYQF/view" data-text="Register with Referral" 
-                    data-color="#EB5E00" data-size="large">
-                    <script>
-                        (function () {
-                            var d = document; var x = !d.getElementById('razorpay-embed-btn-js')
-                            if (x) {
-                                var s = d.createElement('script'); s.defer = !0; s.id = 'razorpay-embed-btn-js';
-                                s.src = 'https://cdn.razorpay.com/static/embed_btn/bundle.js'; d.body.appendChild(s);
-                            } else {
-                                var rzp = window['__rzp__'];
-                                rzp && rzp.init && rzp.init()
-                            }
-                        })();
-                    </script>
-                </div>
-            </li> -->
-            <!-- <li>
-                <div class="razorpay-embed-btn" data-url="https://pages.razorpay.com/pl_OI9NBc2ug2TIR1/view" 
-                style="margin-bottom: -8%; margin-top: -3%;"
-                data-text="Register without Referral" data-color="#EB5E00" data-size="large">
-                    <script>
-                      (function(){
-                        var d=document; var x=!d.getElementById('razorpay-embed-btn-js')
-                        if(x){ var s=d.createElement('script'); s.defer=!0;s.id='razorpay-embed-btn-js';
-                        s.src='https://cdn.razorpay.com/static/embed_btn/bundle.js';d.body.appendChild(s);} else{var rzp=window['__rzp__'];
-                        rzp && rzp.init && rzp.init()}})();
-                    </script>
-                  </div>
-                      
-            </li> -->
-            
-
-        </ul>
-        <div class="auth" id="auth">
-            <!-- <a href="{% url 'register' %}" class="login" style="margin-top: 2%; text-decoration: none;">Sign Up</a> -->
-            <a href="{% url 'login' %}" class="signup" style="margin-top: 2%; text-decoration: none;">Login</a>
-            
-            <a href="{% url 'register' %}" class="signup" style="margin-top: 2%; text-decoration: none;">Become an Angaari🔥</a>
-            <br>
-        </div>
-
-
     </nav>
-    <!-- End of Navbar -->
-    <!-- Allert  baar -->
-    <!-- <div class="alert">
-        <h1>🚀 Limited Seats left for ANGAAR++🔥 <span>Hurry Up!!</span></h1>
-        <button onclick="document.location='{% url 'angaar_plus' %}'">Join Now</button>
-    </div> -->
-    <!-- Landing page -->
-    <main>
-        
-        {% block body %}
-        {% endblock %}
 
-        <!-- Foooter -->
-    </main>
-    <footer>
-        <div class="footer-container">
-            <div class="logo-section">
-                <div class="angaar-btn">
-                    <img src="{% static 'assets/angaar.svg' %}" alt="Angaar Logo" width="80%" class="logo">
-                    <p>theangaarbatch.in</p>
+
+    {% block body %}
+
+
+    {% endblock %}
+
+    <footer class="footer-section">
+        <div class="container">
+            <!-- <div class="footer-cta pt-5 pb-5">
+                    <div class="row">
+                        <div class="col-md-6 mb-30">
+                            <div class="single-cta">
+                                <i class="fas fa-phone"></i>
+                                <div class="cta-text">
+                                    <h4>Call us</h4>
+                                    <span>9876543210 0</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-30">
+                            <div class="single-cta">
+                                <i class="far fa-envelope-open"></i>
+                                <div class="cta-text">
+                                    <h4>Mail us</h4>
+                                    <span>mail@info.com</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div> -->
+            <div class="footer-content pt-5 pb-5">
+                <div class="row">
+                    <div class="col-xl-4 col-lg-4 mb-50">
+                        <div class="footer-widget">
+                            <div class="footer-logo">
+                                <a href="index.html"><img src="{% static 'img/home/angaari_logo.png' %}"
+                                        class="img-fluid" alt="logo"></a>
+                            </div>
+                            <div class="footer-text">
+                                <p>Agr Angaar Hai Tere Houslo Me, To Bas Dekhke Mat Ja... Seekh... Or Lga de... ANGAAR🔥
+                                </p>
+                            </div>
+                            <div class="footer-social-icon">
+                                <span>Socials</span>
+                                <a href="#"><i class="fab fa-linkedin twitter-bg"></i></a>
+                                <a href="#"><i class="fab fa-instagram google-bg"></i></a>
+                                <!-- <a href="#"><i class="fab fa-facebook-f facebook-bg"></i></a>
+                                    <a href="#"><i class="fab fa-twitter twitter-bg"></i></a>
+                                    <a href="#"><i class="fab fa-google-plus-g google-bg"></i></a> -->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
+                        <div class="footer-widget">
+                            <div class="footer-widget-heading">
+                                <h3>Useful Links</h3>
+                            </div>
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">About</a></li>
+                                <li><a href="#">Services</a></li>
+                                <li><a href="#">Portfolio</a></li>
+                                <li><a href="#">Contact</a></li>
+                                <li><a href="#">Our Team</a></li>
+                                <li><a href="#">Latest Going On</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-4 col-md-6 mb-50">
+                        <div class="footer-widget">
+                            <div class="footer-widget-heading">
+                                <h3>Got a query?</h3>
+                            </div>
+                            <div class="footer-text mb-25">
+                                <p>Never kill a question. This is where intelligence begins!</p>
+                            </div>
+                            <div class="subscribe-form">
+                                <form action="#">
+                                    <input type="text" placeholder="Email Address">
+                                    <input type="text" placeholder="Query">
+                                    <button>Send Message</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <p>Join us only if you want to learn🔥</p>
-                <!-- <div class="app-links">
-                <a href="#"><img src="path/to/google-play-badge.png" alt="Google Play"></a>
-                <a href="#"><img src="path/to/app-store-badge.png" alt="App Store"></a>
-            </div> -->
             </div>
-            <!-- <div class="pages-section">
-            <h4>Pages</h4>
-            <ul>
-                <li><a href="#">Home it work</a></li>
-                <li><a href="#">Pricing</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Demo</a></li>
-            </ul>
         </div>
-        <div class="service-section">
-            <h4>Service</h4>
-            <ul>
-                <li><a href="#">Shopify</a></li>
-                <li><a href="#">WordPress</a></li>
-                <li><a href="#">UI/UX Design</a></li>
-            </ul>
-        </div> -->
-            <div class="contact-section">
-                <h4>Contact</h4>
-                <p><i class="fa fa-phone"></i> +91 8273619318</p>
-                <p><i class="fa fa-envelope"></i> info@theangaarbatch.in</p>
-                <!-- <p><i class="fa fa-map-marker"></i> 2972 Westheimer Rd. Santa Ana, Illinois 85486</p> -->
-            </div>
-            <div class="social-media-section">
-                <h4>Social media</h4>
-                <div class="social-icons">
-                    <a href="https://www.linkedin.com/company/the-angaar-batch/" target="_blank"><i
-                            class="fab fa-linkedin"></i></a>
-                    <a href="https://www.instagram.com/the_angaar_batch/" target="_blank"><i
-                            class="fab fa-instagram"></i></a>
+        <div class="copyright-area">
+            <div class="container">
+                <div class="row">
+                    <div class="text-center text-lg-left">
+                        <div class="copyright-text">
+                            <p>Copyright &copy; 2024, All Right Reserved <a href="#" style="pointer-events: none;">The
+                                    Angaar Batch 🔥</a></p>
+                        </div>
+                    </div>
+
                 </div>
             </div>
+        </div>
+        <div class="powered-by" style="position: absolute">
+            <h5 class="text-white">Powered By</h5>
+            <img src="https://w3grads.com/assets/logo-44ca63025513c8116a3bb05e69891fb438ace2b576cce1e05ade3e20270fff19.png"
+                class="logo-img" alt="W3Grads Logo">
         </div>
     </footer>
-    <script src="{% static 'js/home/js/nav.js' %}"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
