sheet utton done

--- a/templates/administration/sheet/sheets.html
+++ b/templates/administration/sheet/sheets.html
@@ -68,7 +68,7 @@ My Courses
                         <p class="card-text mb-1">
                             Total Questions: {{ sheet.get_total_questions }}
                         </p>
-                        <a href="#" class="btn btn-outline-secondary w-100">View More</a>
+                        <a href="{% url 'instructor_sheet' sheet.slug %}" class="btn btn-outline-secondary w-100">View More</a>
                     </div>
                 </a>
             </div>
