added the view submission for admin

--- a/templates/administration/sheet/sheet.html
+++ b/templates/administration/sheet/sheet.html
@@ -199,7 +199,7 @@ active
 
                             <td class="border-bottom-0">
                                 <div class="d-flex align-items-center gap-2">
-                                    <a href="#" class="btn btn-outline-info text-blue float-end">Submissions </a>
+                                    <a href="{% url 'instructor_view_submissions' question.slug %}" class="btn btn-outline-info text-blue float-end">Submissions </a>
                                 </div>
                             </td>
                         </tr>
